# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: flake8_linter.yml
page_analyzer/: __init__.py  app.py  db_tools.py  url_parsing.py
page_analyzer/templates/: base.html  index.html  main_page.html  url_page.html  urls.html
